--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-text">we can <span class="color">develop</span> it</div>
     <div class="sub-text">Strategy / Consulting / Design / Development</div>
   </div>
-  <a href="" class="button">Get a Quote</a>
+  <a href="contact.html" class="button">Get a Quote</a>
 </body>
 
 </html>
