--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <a href="index.html" class="back">← Back</a>
   <img src="images/logo_transparent.png" class="logo-image" alt="">
   <div class="main">
     <div class="sub-text">Get in touch</div>
