Add contact form

--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Archival Node - Contact</title>
+  <title>Archival Node - Thank you for your contact</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
@@ -13,14 +13,11 @@
 <body>
   <a href="index.html" class="back">← Back</a>
   <img src="images/logo_transparent.png" class="logo-image" alt="">
-  <form name="contact" method="POST" netlify action="thanks.html">
+  <form name="contact" method="POST" netlify>
     <div class="main">
-      <div class="sub-text">Get in touch</div>
-      <input required type="text" name="name" placeholder="Name">
-      <input required type="email" name="email" placeholder="Email">
-      <textarea required name="message" cols="30" rows="10" placeholder="Message"></textarea>
+      <div class="sub-text">thank you for contacting us</div>
     </div>
-    <button type="submit" class="button">Send</button>
+    <a href="index.html" class="button">Back to home</a>
   </form>
 </body>
 
