focus on blockchain

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
   <img src="images/logo_transparent.png" class="logo-image" alt="">
   <div class="main">
-    <div class="sub-text color">Web / eCommerce / IoT / Financial Systems</div>
-    <div class="main-text">If you can imagine it,</div>
-    <div class="main-text">we can <span class="color">develop</span> it</div>
-    <div class="sub-text">Strategy / Consulting / Design / Development</div>
+    <div class="sub-text color">Blockchain / dApps / Smart Contracts / Consulting</div>
+    <div class="main-text">Developing the future</div>
+    <div class="main-text">of <span class="color">financial systems.</span></div>
+    <div class="sub-text">Blockchain Engineering, made in Singapore.</div>
   </div>
   <a href="contact.html" class="button">Get a Quote</a>
 </body>
